Create Mobile Project Fit (Update StudentAccount)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,8 @@
         <activity android:name=".MainPage"
             android:screenOrientation="portrait"/>
         <activity android:name=".AddActivity"
+            android:theme="@style/AppTheme2"
+            android:label="@string/app_name2"
             android:screenOrientation="portrait"/>
         <activity android:name=".Login"
             android:screenOrientation="portrait"/>
